<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/etParola2"

        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/parola2"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:layout_constraintTop_toBottomOf="@+id/etParola3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_left2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="35dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="35dp" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="108dp"
        android:layout_height="122dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail2"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:hint="@string/email"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintTop_toBottomOf="@+id/logo2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        tools:layout_editor_absoluteY="185dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etParola3"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/parola"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:layout_constraintTop_toBottomOf="@+id/etEmail2" />

    <Button
        android:id="@+id/btnConectare2"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/inscriere2"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:layout_constraintTop_toBottomOf="@+id/etParola2" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnConectareFacebook2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"

        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:layout_constraintTop_toBottomOf="@+id/btnConectare2"  >

    </com.facebook.login.widget.LoginButton>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnConectareGoogle2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"

        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"

        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:layout_constraintTop_toBottomOf="@id/btnConectareFacebook2">

    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/tvSau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/sau"

        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:layout_constraintTop_toTopOf="@id/view1"
        app:layout_constraintVertical_bias="0.444" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@id/tvSau"
        android:background="@color/accent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/btnConectareGoogle2"

        />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="48dp"
        android:background="@color/accent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/tvSau"
        app:layout_constraintTop_toBottomOf="@+id/btnConectareGoogle2" />

    <TextView
        android:id="@+id/tvDaCont2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/daCont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
        app:layout_constraintTop_toBottomOf="@+id/tvSau"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvConectare2"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/conectare2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toEndOf="@+id/tvDaCont2"
        app:layout_constraintTop_toBottomOf="@+id/tvSau"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>